f59be85 Fixed spacing between label and arrow

--- a/src/06-components/molecules/expandable-box/expandable-box.scss
+++ b/src/06-components/molecules/expandable-box/expandable-box.scss
@@ -45,6 +45,7 @@
       & ~ .sc-expandable-box__title > .sc-expandable-box__label {
         &:after {
           @include rotating-arrow('up');
+          margin-left: $L;
         }
       }
     }
